# transcription-and-summary

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  ALL_LLM_PROMPTS_AND_RESPONSES.txt  CONTRIBUTING.md  DESKTOP_APP_PLAN.md  DISTRIBUTION_PLAN.md  IMPLEMENTATION_PLAN.md  INSTALL_TROUBLESHOOTING.md  LICENSE  Makefile  README.md  SETUP.md  config_test.yaml  debug_web_ui.py  diagnose_audio.py  diagnose_audio_detailed.py  diagnose_python.py  fix_numpy.py  generate_daily_transcript.py  install.py  install.sh  install_macos.py  install_no_torch.py  pyproject.toml  quick_fix_macos.py  requirements-cpu.txt  requirements-minimal.txt  requirements-no-torch.txt  requirements.txt  setup_env.py  test_audio_import.py  test_claude.py  test_daily_transcript.py  test_installation.py  test_no_torch.py  test_sample.py  test_summary.py  (+2 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: README.md
examples/: README.md
scripts/: README.md  diagnose_audio_detailed.py  install.sh
src/: audio_capture.py  automation.py  cli.py  config.py  google_docs.py  logger.py  main.py  summarization.py  transcription.py  web_ui.py
tests/: README.md  __init__.py  conftest.py  test_audio_capture.py  test_audio_import.py  test_config.py  test_summarization.py  test_summary.py
